# tui-tris

./: .gitignore  README.md  SESSION.md  pyproject.toml
src/tuitris/: __main__.py  app.py  bag.py  board.py  game.py  render.py  scores.py  screens.py  tetromino.py
tests/: test_app_smoke.py  test_bag.py  test_board.py  test_game.py  test_scores.py
