[project]
name = "tuitris"
version = "0.1.0"
description = "Tetris-style TUI game in Python + textual"
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Naren" }]
dependencies = [
    "textual>=0.80",
]

[project.scripts]
tuitris = "tuitris.app:main"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=1.4.0",
    "ruff>=0.6",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/tuitris"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "W"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
asyncio_mode = "auto"
